--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "charm": "~0.2.0",
-    "serialport": "~1.4.5"
+    "serialport": "~1.4.5",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "coffee-script": "~1.7.1"
